--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -16,6 +16,7 @@ jobs:
       node_package_manager: ""
       use_go: false
       go_version: ""
+    secrets:
       github_pat: dummy
 
   test-ci-node:
@@ -28,6 +29,7 @@ jobs:
       node_package_manager: "yarn"
       use_go: false
       go_version: ""
+    secrets:
       github_pat: dummy
 
   test-ci-go:
@@ -40,6 +42,7 @@ jobs:
       node_package_manager: ""
       use_go: true
       go_version: 1.17.6
+    secrets:
       github_pat: dummy
 
   test-ci-ruby-and-node:
@@ -52,6 +55,7 @@ jobs:
       node_package_manager: "yarn"
       use_go: false
       go_version: ""
+    secrets:
       github_pat: dummy
 
   test-ci-test-in-parallel:
@@ -65,4 +69,5 @@ jobs:
       use_go: false
       go_version: ""
       test_in_parallel: true
+    secrets:
       github_pat: dummy
