--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,7 +161,7 @@ jobs:
       fail-fast: false
       matrix:
         node_count: [8]
-        node_index: [0, 1, 2, 3]
+        node_index: [0, 1, 2, 3, 4, 5, 6, 7]
     steps:
       - uses: actions/checkout@v2
       - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
@@ -219,7 +219,7 @@ jobs:
       fail-fast: false
       matrix:
         node_count: [8]
-        node_index: [0, 1, 2, 3]
+        node_index: [0, 1, 2, 3, 4, 5, 6, 7]
     steps:
       - uses: actions/checkout@v2
       - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
