--- a/.github/actions/setup-lang/action.yml
+++ b/.github/actions/setup-lang/action.yml
@@ -57,3 +57,5 @@ runs:
       uses: actions/setup-go@v2
       with:
         go-version: ${{ inputs.go_version }}
+    - name: Setup reviewdog
+      uses: reviewdog/action-setup@v1
