--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,7 @@ jobs:
           RUBY_VERSION: ${{ inputs.ruby_version }}
           NODE_VERSION: ${{ inputs.node_version }}
           GO_VERSION: ${{ inputs.go_version }}
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.github_pat }}
 
   test:
     if: ${{ inputs.use_mysql == false && inputs.test_in_parallel == false }}
