--- a/.github/actions/reviewdog/action.yml
+++ b/.github/actions/reviewdog/action.yml
@@ -1,19 +1,21 @@
 name: Setup Reviewdog
+
 runs:
+  using: "composite"
   steps:
     - name: Setup reviewdog/eslint
-      - uses: reviewdog/action-eslint@v1
-        with:
-          reporter: github-pr-review
-          eslint_flags: 'frontend/'
+      uses: reviewdog/action-eslint@v1
+      with:
+        reporter: github-pr-review
+        eslint_flags: 'frontend/'
     - name: Setup reviewdog/rubocop
-        uses: reviewdog/action-rubocop@v2
-        with:
-          rubocop_version: gemfile
-          rubocop_extensions: rubocop-rails:gemfile rubocop-rspec:gemfile
-          reporter: github-pr-review
+      uses: reviewdog/action-rubocop@v2
+      with:
+        rubocop_version: gemfile
+        rubocop_extensions: rubocop-rails:gemfile rubocop-rspec:gemfile
+        reporter: github-pr-review
     - name: Setup reviewdog/brakeman
-        uses: reviewdog/action-brakeman@v2
-        with:
-          brakeman_version: 4.8.2
-          reporter: github-pr-review
+      uses: reviewdog/action-brakeman@v2
+      with:
+        brakeman_version: 4.8.2
+        reporter: github-pr-review
