--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
           node_package_manager: ${{ inputs.node_package_manager }}
           use_go: ${{ inputs.use_go }}
           go_version: ${{ inputs.go_version }}
-      - uses: pinnacles/common-cicd-actions/.github/actions/reviewdog
+      - uses: pinnacles/common-cicd-actions/.github/actions/reviewdog@fukumone/add_reviewdog_11
       - run: make lint
         env:
           ACTION_TYPE: CI
