run brakeman only ruby

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,9 @@ jobs:
           go_version: ${{ inputs.go_version }}
       - uses: pinnacles/common-cicd-actions/.github/actions/reviewdog@v0.2.16
         with:
+          use_ruby: ${{ inputs.use_ruby }}
+          use_node: ${{ inputs.use_node }}
+          use_go: ${{ inputs.use_go }}
           github_token: ${{ secrets.github_pat }}
       - run: make lint
         env:
