--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test-ci-ruby:
-    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@main
+    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@shibukk/patch-reviewdog
     with:
       use_ruby: true
       ruby_version: 3.1.0
@@ -20,7 +20,7 @@ jobs:
       github_pat: dummy
 
   test-ci-node:
-    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@main
+    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@shibukk/patch-reviewdog
     with:
       use_ruby: false
       ruby_version: ""
@@ -33,7 +33,7 @@ jobs:
       github_pat: dummy
 
   test-ci-go:
-    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@main
+    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@shibukk/patch-reviewdog
     with:
       use_ruby: false
       ruby_version: ""
@@ -46,7 +46,7 @@ jobs:
       github_pat: dummy
 
   test-ci-ruby-and-node:
-    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@main
+    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@shibukk/patch-reviewdog
     with:
       use_ruby: true
       ruby_version: 3.1.0
@@ -59,7 +59,7 @@ jobs:
       github_pat: dummy
 
   test-ci-test-in-parallel:
-    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@main
+    uses: pinnacles/common-cicd-actions/.github/workflows/ci.yml@shibukk/patch-reviewdog
     with:
       use_ruby: true
       ruby_version: 3.1.0
