skip when test_ci

--- a/.github/actions/reviewdog/action.yml
+++ b/.github/actions/reviewdog/action.yml
@@ -16,6 +16,10 @@ inputs:
     required: true
     default: ""
     type: string
+  test_ci_mode:
+    required: false
+    default: false
+    type: boolean
 runs:
   using: "composite"
   steps:
@@ -35,7 +39,7 @@ runs:
     #     github_token: ${{ inputs.github_token }}
     #     fail_on_error: true
     - name: Setup reviewdog/brakeman
-      if: ${{ inputs.use_ruby == 'true' }}
+      if: ${{ inputs.use_ruby == true && inputs.test_ci_mode == false }}
       uses: reviewdog/action-brakeman@v2
       with:
         brakeman_version: 4.8.2
