--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,7 @@ jobs:
           use_node: ${{ inputs.use_node }}
           use_go: ${{ inputs.use_go }}
           github_token: ${{ secrets.github_pat }}
+          test_ci_mode: ${{ inputs.test_ci_mode }}
       - run: make lint
         env:
           ACTION_TYPE: CI
