--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -139,3 +139,4 @@ jobs:
           ENVIRONMENT: ${{ inputs.environment }}
           IMAGE_TAG: ${{ needs.build-and-push.outputs.image_tag }}
           GITHUB_TOKEN: ${{ secrets.github_pat }}
+          GITHUB_PR_URL: ${{ github.event.pull_request.html_url }}
