--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,9 +254,10 @@ jobs:
           go_version: ${{ inputs.go_version }}
       - uses: actions/download-artifact@v2
         with:
-          name: report-${{ github.head_ref }}
-          path: report-${{ github.head_ref }}
+          name: report-e6d95c62e6058ed3154e8740f7ab2e8a1cc54b52
+          path: report-e6d95c62e6058ed3154e8740f7ab2e8a1cc54b52
         continue-on-error: true
+      - run: make test
       - run: |
           curl -L --out split-test https://github.com/mtsmfm/split-test/releases/download/v1.0.0/split-test-x86_64-unknown-linux-gnu
           chmod +x split-test
@@ -268,7 +269,7 @@ jobs:
           GO_VERSION: ${{ inputs.go_version }}
           NODE_COUNT: ${{ matrix.node_count }}
           NODE_INDEX: ${{ matrix.node_index }}
-          JUNIT_REPORT_DIR_OLD: report-${{ github.head_ref }}
+          JUNIT_REPORT_DIR_OLD: report-e6d95c62e6058ed3154e8740f7ab2e8a1cc54b52
           JUNIT_REPORT_DIR_NEW: report
           GITHUB_TOKEN: ${{ secrets.github_pat }}
           COVERAGE: ${{ needs.dependency-resolution.outputs.allow_simplecov_action }}
