--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,13 +96,9 @@ jobs:
           node_package_manager: ${{ inputs.node_package_manager }}
           use_go: ${{ inputs.use_go }}
           go_version: ${{ inputs.go_version }}
-      - uses: pinnacles/common-cicd-actions/.github/actions/reviewdog@v0.6.0
+      - uses: pinnacles/common-cicd-actions/.github/actions/reviewdog@fukumone/test_reviewdog
         with:
-          use_ruby: ${{ inputs.use_ruby }}
-          use_node: ${{ inputs.use_node }}
-          use_go: ${{ inputs.use_go }}
           github_token: ${{ secrets.github_pat }}
-          test_ci_mode: ${{ inputs.test_ci_mode }}
       - run: make lint
         env:
           ACTION_TYPE: CI
