--- a/.github/actions/reviewdog/rails/action.yml
+++ b/.github/actions/reviewdog/rails/action.yml
@@ -1,14 +1,10 @@
-name: Setup Reviewdog
+name: Setup Reviewdog for Rails
 inputs:
-  use_ruby:
+  use_rubocop:
     required: false
     default: false
     type: boolean
-  use_node:
-    required: false
-    default: false
-    type: boolean
-  use_go:
+  use_brakeman:
     required: false
     default: false
     type: boolean
@@ -16,32 +12,22 @@ inputs:
     required: true
     default: ""
     type: string
-  test_ci_mode:
-    required: false
-    default: false
-    type: boolean
 runs:
   using: "composite"
   steps:
-    # - name: Setup reviewdog/eslint
-    #   uses: reviewdog/action-eslint@v1
-    #   with:
-    #     eslint_flags: 'frontend/'
-    #     reporter: github-pr-review
-    #     github_token: ${{ inputs.github_token }}
-    #     fail_on_error: true
     - name: Setup reviewdog/rubocop
+      if: ${{ inputs.use_rubocop == true }}
       uses: reviewdog/action-rubocop@v2
       with:
+        github_token: ${{ inputs.github_token }}
         rubocop_version: gemfile
         rubocop_extensions: rubocop-rails:gemfile rubocop-rspec:gemfile rubocop-performance:gemfile
         reporter: github-pr-review
-        github_token: ${{ inputs.github_token }}
         fail_on_error: true
     - name: Setup reviewdog/brakeman
-      if: ${{ inputs.use_ruby == true && inputs.test_ci_mode == false }}
+      if: ${{ inputs.use_brakeman == true }}
       uses: reviewdog/action-brakeman@v2
       with:
-        reporter: github-pr-review
         github_token: ${{ inputs.github_token }}
+        reporter: github-pr-review
         fail_on_error: true
