fix: it should not GITHUB_PAT be dummy

--- a/.github/workflows/test_reviewdog_rails.yml
+++ b/.github/workflows/test_reviewdog_rails.yml
@@ -14,4 +14,4 @@ jobs:
       use_rubocop: true
       use_brakeman: true
     secrets:
-      github_pat: dummy
+      github_pat: ${{ secrets.GITHUB_TOKEN }}
